{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 481,
  "lineage": "9b414365-0622-432b-c4bc-c77902990a8c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-038a79a53fa575338",
            "domain": "vpc",
            "id": "eipalloc-002b3b0f5301f1944",
            "network_interface": "eni-0630ba7fe6c1c16f8",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-54-198-9-244.compute-1.amazonaws.com",
            "public_ip": "54.198.9.244",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.mgmt",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "each": "list",
      "provider": "module.mgmt.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:147011261098:instance/i-011410905972ac2bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011410905972ac2bf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_test_default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6378920132300c9",
            "private_dns": "ip-10-0-1-13.ec2.internal",
            "private_ip": "10.0.1.13",
            "public_ip": "54.224.117.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0981358278d18d92d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e400b7a30590530",
            "tags": {
              "Name": "bastion-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0834162334a123399"
            ]
          },
          "dependencies": [
            "module.mgmt.aws_security_group.mgmt",
            "module.vpc.aws_subnet.mgmt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sdsapp",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sds",
      "each": "list",
      "provider": "module.sdsapp.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:147011261098:instance/i-0f795432b94e00f70",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f795432b94e00f70",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_test_default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b3d2c191924be9ab",
            "private_dns": "ip-10-0-11-54.ec2.internal",
            "private_ip": "10.0.11.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b19b18783fa0bb78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c786039508614c8",
            "tags": {
              "Name": "sds-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8d341401b1f4541"
            ]
          },
          "dependencies": [
            "module.sdsapp.aws_security_group.sds",
            "module.vpc.aws_subnet.sds",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02354e95b39ca8dec",
            "arn": "arn:aws:ec2:us-east-1:147011261098:instance/i-0ec0bbdab53433ed7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec0bbdab53433ed7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_test_default",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0878b498e58d75245",
            "private_dns": "ip-10-0-11-49.ec2.internal",
            "private_ip": "10.0.11.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ddd37c57d9e37878",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c786039508614c8",
            "tags": {
              "Name": "sds-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c8d341401b1f4541"
            ]
          },
          "dependencies": [
            "module.sdsapp.aws_security_group.sds",
            "module.vpc.aws_subnet.sds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147011261098:internet-gateway/igw-0b628a05151704596",
            "id": "igw-0b628a05151704596",
            "owner_id": "147011261098",
            "tags": {
              "Name": "testmain"
            },
            "vpc_id": "vpc-0d9085cfbcf4e0051"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002b3b0f5301f1944",
            "id": "nat-00b38e0dc263e0f00",
            "network_interface_id": "eni-0630ba7fe6c1c16f8",
            "private_ip": "10.0.1.64",
            "public_ip": "54.198.9.244",
            "subnet_id": "subnet-09e400b7a30590530"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.mgmt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_ig",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b628a05151704596",
            "id": "r-rtb-064b78db8af64fcb31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064b78db8af64fcb3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_rt",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f68964644de66845",
            "owner_id": "147011261098",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00b38e0dc263e0f00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT Route Table"
            },
            "vpc_id": "vpc-0d9085cfbcf4e0051"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sds",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec51023315126248",
            "route_table_id": "rtb-0f68964644de66845",
            "subnet_id": "subnet-08c786039508614c8"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.nat_rt",
            "module.vpc.aws_subnet.mgmt",
            "module.vpc.aws_subnet.sds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mgmt",
      "provider": "module.mgmt.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147011261098:security-group/sg-0834162334a123399",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0834162334a123399",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mgmt-sg",
            "name_prefix": "",
            "owner_id": "147011261098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9085cfbcf4e0051"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sdsapp",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sds",
      "provider": "module.sdsapp.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147011261098:security-group/sg-0c8d341401b1f4541",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c8d341401b1f4541",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0834162334a123399"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0834162334a123399"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sds-sg",
            "name_prefix": "",
            "owner_id": "147011261098",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9085cfbcf4e0051"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sdsapp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_allow_inbound",
      "provider": "module.sdsapp.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-430297449",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c8d341401b1f4541",
            "self": false,
            "source_security_group_id": "sg-0834162334a123399",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.mgmt.aws_security_group.mgmt",
            "module.sdsapp.aws_security_group.sds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sdsapp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "asg_allow_inbound_icmp",
      "provider": "module.sdsapp.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": -1,
            "id": "sgrule-158991276",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0c8d341401b1f4541",
            "self": false,
            "source_security_group_id": "sg-0834162334a123399",
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.mgmt.aws_security_group.mgmt",
            "module.sdsapp.aws_security_group.sds",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound",
      "provider": "module.mgmt.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2732957309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0834162334a123399",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.mgmt.aws_security_group.mgmt"
          ]
        }
      ]
    },
    {
      "module": "module.sdsapp",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound",
      "provider": "module.sdsapp.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-88547145",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c8d341401b1f4541",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "module.sdsapp.aws_security_group.sds"
          ]
        }
      ]
    },
    {
      "module": "module.mgmt",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sshpublic",
      "provider": "module.mgmt.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2307249769",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0834162334a123399",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.mgmt.aws_security_group.mgmt",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mgmt",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147011261098:subnet/subnet-09e400b7a30590530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09e400b7a30590530",
            "map_public_ip_on_launch": true,
            "owner_id": "147011261098",
            "tags": {
              "Name": "MGMT"
            },
            "vpc_id": "vpc-0d9085cfbcf4e0051"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sds",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147011261098:subnet/subnet-08c786039508614c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-08c786039508614c8",
            "map_public_ip_on_launch": false,
            "owner_id": "147011261098",
            "tags": {
              "Name": "SDS"
            },
            "vpc_id": "vpc-0d9085cfbcf4e0051"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147011261098:vpc/vpc-0d9085cfbcf4e0051",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0090abfef709addd2",
            "default_route_table_id": "rtb-064b78db8af64fcb3",
            "default_security_group_id": "sg-0a544a123511db317",
            "dhcp_options_id": "dopt-1630b06c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d9085cfbcf4e0051",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-064b78db8af64fcb3",
            "owner_id": "147011261098",
            "tags": {
              "Name": "testmain"
            }
          }
        }
      ]
    }
  ]
}